# brownrook-idc

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
scripts/: update_infra_metadata.py
src/brownrook_idc/: main.py  update_infra_metadata.py
tests/: test_health.py
workflows/: ci-cd.yaml
