[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brownrook-idc"
version = "0.1.0"
description = "BrownRook IDC service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "requests>=2.32,<3.0",
  "cachetools>=5.3,<6.0",
  "python-dotenv>=1.0,<2.0",
  "cryptography>=42,<44",
  "PyJWT>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1.0",
  "ruff>=0.6,<1.0",
  "black>=24,<25",
  "mypy>=1.11,<2.0",
]

[project.scripts]
brownrook-idc = "brownrook_idc.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
